Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -237,22 +237,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'name': 'Salt And Board', 'price': 2, 'is_closed': False, 'review_count': 11}"
+       "{'name': 'Frontier Restaurant',\n",
+       " 'price': 1,\n",
+       " 'is_closed': False,\n",
+       " 'review_count': 1373}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "format_restaurant(restaurants[1]) # {'is_closed': False, 'name': 'Fork & Fig', 'price': 2, 'review_count': 610}"
+    "format_restaurant(restaurants[2]) # {'is_closed': False, 'name': 'Fork & Fig', 'price': 2, 'review_count': 610}"
    ]
   },
   {
