--- a/index.ipynb
+++ b/index.ipynb
@@ -237,25 +237,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'name': 'Frontier Restaurant',\n",
-       " 'price': 1,\n",
-       " 'is_closed': False,\n",
-       " 'review_count': 1373}"
+       "{'name': 'Fork & Fig', 'price': 2, 'is_closed': False, 'review_count': 610}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "format_restaurant(restaurants[2]) # {'is_closed': False, 'name': 'Fork & Fig', 'price': 2, 'review_count': 610}"
+    "format_restaurant(restaurants[0]) # {'is_closed': False, 'name': 'Fork & Fig', 'price': 2, 'review_count': 610}"
    ]
   },
   {
