Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -269,7 +269,8 @@
    "outputs": [],
    "source": [
     "def map_format_restaurants(restaurants):\n",
-    "    selected=[]"
+    "    selected=[]\n",
+    "    "
    ]
   },
   {
