--- a/index.ipynb
+++ b/index.ipynb
@@ -270,7 +270,7 @@
    "source": [
     "def map_format_restaurants(restaurants):\n",
     "    selected=[]\n",
-    "    "
+    "    for restaurant in restaurants"
    ]
   },
   {
