Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -270,7 +270,8 @@
    "source": [
     "def map_format_restaurants(restaurants):\n",
     "    selected=[]\n",
-    "    for restaurant in restaurants"
+    "    for restaurant in restaurants:\n",
+    "        "
    ]
   },
   {
