--- a/index.ipynb
+++ b/index.ipynb
@@ -269,8 +269,7 @@
    "outputs": [],
    "source": [
     "def map_format_restaurants(restaurants):\n",
-    "    selected=[]\n",
-    "    for restaurant in restaurants:\n",
+    "    return list\n",
     "        "
    ]
   },
