--- a/index.ipynb
+++ b/index.ipynb
@@ -364,7 +364,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    return filter(lambda restaurants,restaurants)"
+    "    return filter(lambda restaurant,restaurants)"
    ]
   },
   {
