--- a/index.ipynb
+++ b/index.ipynb
@@ -359,12 +359,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-14-590051daada9>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-14-590051daada9>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    filter(lambda restaurant,restaurants)\u001b[0m\n\u001b[0m                                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "     filter(lambda restaurant,restaurants)"
+    "    filter(lambda restaurant,restaurants)"
    ]
   },
   {
