Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -373,7 +373,7 @@
    ],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    filter(lambda restaurant,restaurants)"
+    "    filter(restaurant,restaurants)"
    ]
   },
   {
