--- a/index.ipynb
+++ b/index.ipynb
@@ -359,21 +359,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-14-590051daada9>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-14-590051daada9>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    filter(lambda restaurant,restaurants)\u001b[0m\n\u001b[0m                                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    rfilter(restaurant,restaurants)"
+    "    return filter(restaurant,restaurants)"
    ]
   },
   {
