Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -364,7 +364,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    return filter(restaurant, restaurants)"
+    "    return filter('is_cl', restaurants)"
    ]
   },
   {
