--- a/index.ipynb
+++ b/index.ipynb
@@ -364,7 +364,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    return list(filter(lambra'is_closed', restaurants))"
+    "    return list(filter(lambda restaurants'is_closed', restaurants))"
    ]
   },
   {
