--- a/index.ipynb
+++ b/index.ipynb
@@ -364,7 +364,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    return list(filter(lambda restaurant: restaurant['is_closed'], restaurants))"
+    "    return list(filter(lambda restaurant: not restaurant['is_closed'], restaurants))"
    ]
   },
   {
