--- a/index.ipynb
+++ b/index.ipynb
@@ -439,7 +439,7 @@
    "outputs": [],
    "source": [
     "def cheapest_restaurants(restaurants):\n",
-    "    return list(filter(lambda restaurant: restaurant[]))"
+    "    return list(filter(lambda restaurant: restaurant['price']))"
    ]
   },
   {
