--- a/index.ipynb
+++ b/index.ipynb
@@ -486,7 +486,7 @@
    "outputs": [],
    "source": [
     "def sufficiently_reviewed_restaurants(restaurants):\n",
-    "    return list(filter(lambda restaurant: restaurant['price'] <=1, restaurants))"
+    "    return list(filter(lambda restaurant: restaurant['revie_co] <=1, restaurants))"
    ]
   },
   {
